@@ -7,11 +7,15 @@ module ActiveSupport #:nodoc:
       module Conversions
         # Form can be either :utc (default) or :local.
         def to_time(form = :utc)
-          ::Time.send(form, *ParseDate.parsedate(self))
+          ::Time.send("#{form}_time", *ParseDate.parsedate(self)[0..5].map {|arg| arg || 0})
         end
 
         def to_date
           ::Date.new(*ParseDate.parsedate(self)[0..2])
+        end
+        
+        def to_datetime
+          ::DateTime.civil(*ParseDate.parsedate(self)[0..5].map {|arg| arg || 0} << 0 << 0)
         end
       end
     end
